--- a/QRcode_docker.html
+++ b/QRcode_docker.html
@@ -100,7 +100,7 @@
 </head>
 <body>
 
-    <h2>🎁 抽獎核銷與進度系統</h2>
+    <h2>🎟️ 抽獎核銷與進度系統</h2>
     
     <div id="reader"></div>
 
@@ -247,3 +247,4 @@
     </script>
 </body>
 </html>
+
