Update print statement from 'Hello' to 'Goodbye'

--- a/QRcode_addinfo.html
+++ b/QRcode_addinfo.html
@@ -89,7 +89,7 @@
 </head>
 <body>
 
-    <h2>🎁 抽獎核銷與進度系統</h2>
+    <h2>🎟️ 抽獎核銷與進度系統</h2>
     
     <div id="reader"></div>
 
@@ -338,4 +338,5 @@
         }
     </script>
 </body>
+
 </html>
