--- a/QRcode_docker_addinfo.html
+++ b/QRcode_docker_addinfo.html
@@ -123,7 +123,7 @@
                 <input type="text" id="userIdCard" placeholder="例如: A123456789">
             </div>
             <div class="form-group">
-                <label>通訊地址</label>
+                <label>戸籍地址</label>
                 <div class="address-row">
                     <select id="userCity" onchange="updateDistricts()">
                         <option value="">選擇縣市</option>
@@ -364,3 +364,4 @@
     </script>
 </body>
 </html>
+
