--- a/QRocde_TV.html
+++ b/QRocde_TV.html
@@ -140,7 +140,7 @@
 </div>
 
 <script>
-    const targetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSkwZLmao8afS8265szRVJHa3s6tFRcS2pEc51_9k92ZS4VmYugFodOfaSYHY8xCSf_5xxwrJf5Epob/pub?gid=0&single=true&output=csv';
+    const targetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSkwZLmao8afS8265szRVJHa3s6tFRcS2pEc51_9k92ZS4VmYugFodOfaSYHY8xCSf_5xxwrJf5Epob/pub?gid=31666847&single=true&output=csv';
     const PROXY_URL = 'https://api.allorigins.win/raw?url=' + encodeURIComponent(targetUrl);
     
     const PRIZE_ORDER = ["特別獎", "頭獎", "二獎", "三獎", "四獎", "五獎", "六獎", "七獎", "八獎", "九獎", "十獎", "十一獎", "十二獎", "十三獎", "十四獎", "十五獎", "十六獎", "十七獎", "十八獎", "十九獎", "二十獎", "二十一獎", "二十二獎"];
@@ -248,4 +248,5 @@
 </script>
 
 </body>
+
 </html>
