--- a/QRcode_addinfo.html
+++ b/QRcode_addinfo.html
@@ -123,6 +123,7 @@
 
     <script>
         const WEBHOOK_URL = 'https://projectboy-n8n-free.hf.space/webhook/new_bingo';
+        // const WEBHOOK_URL = 'https://buck-decent-bobcat.ngrok-free.app/webhook/new_bingo';
         let html5QrCode;
         let isEditMode = false;
         let currentNote = "";
@@ -296,3 +297,4 @@
     </script>
 </body>
 </html>
+
