--- a/QRcode_addinfo.html
+++ b/QRcode_addinfo.html
@@ -77,7 +77,11 @@
     <div id="reader"></div>
 
     <div class="container">
-        <textarea id="scannedResult" placeholder="點擊重新掃描或在此手動輸入編號..."></textarea>
+        <textarea id="scannedResult" 
+          placeholder="點擊重新掃描或在此手動輸入編號..." 
+          wrap="off" 
+          onkeydown="if(event.keyCode===13){event.preventDefault();handleAction('code');}"></textarea>
+        
         <div class="btn-group">
             <button class="btn-scan" onclick="startScanner()">🔄 啟動相機掃描</button>
             <button class="btn-query" onclick="handleAction('code')">🔍 手動查詢</button>
@@ -297,4 +301,5 @@
     </script>
 </body>
 </html>
+
 
