--- a/QRcode_input_many.html
+++ b/QRcode_input_many.html
@@ -61,6 +61,20 @@
                         <option value="四獎">四獎</option>
                         <option value="五獎">五獎</option>
                         <option value="六獎">六獎</option>
+                        <option value="七獎">七獎</option>
+                        <option value="八獎">八獎</option>
+                        <option value="九獎">九獎</option>
+                        <option value="十獎">十獎</option>
+                        <option value="十一獎">十一獎</option>
+                        <option value="十二獎">十二獎</option>
+                        <option value="十三獎">十三獎</option>
+                        <option value="十四獎">十四獎</option>
+                        <option value="十五獎">十五獎</option>
+                        <option value="十六獎">十六獎</option>
+                        <option value="十七獎">十七獎</option>
+                        <option value="十八獎">十八獎</option>
+                        <option value="十九獎">十九獎</option>
+                        <option value="二十獎">二十獎</option>
                     </select>
                 </div>
                 <div class="col-span-1">
@@ -102,13 +116,27 @@
 
     <script>
         const prizeData = {
-            "特別獎": { content: "一齊發~商品抵用劵_17,800元", note: "需身分證" },
-            "頭獎": { content: "一路發~商品抵用劵_16,800元", note: "需身分證" },
-            "二獎": { content: "土農讓你發~商品抵用劵_8,800元", note: "需身分證" },
-            "三獎": { content: "六六大順~商品抵用劵_6,000元", note: "需身分證" },
-            "四獎": { content: "月來越美麗富貴一整年富麗米12包", note: "可換4,100元抵用劵、需身分證" },
-            "五獎": { content: "月月歡囍願望成真囍願蛋12盒", note: "可換2,800元抵用劵、需身分證" },
-            "六獎": { content: "龍鳳呈祥好運年菜", note: "可換2,300元抵用劵、需身分證" }
+            "特別獎": { content: "一發衝天｜商品抵用券18,800元", note: "需身分證" },
+            "頭獎": { content: "一路發財｜商品抵用券16,800元", note: "需身分證" },
+            "二獎": { content: "八方來財｜商品抵用券8,800元", note: "需身分證" },
+            "三獎": { content: "祿馬交馳｜商品抵用券6,000元", note: "需身分證" },
+            "四獎": { content: "三陽開泰｜商品抵用券3,600元", note: "需身分證" },
+            "五獎": { content: "接二連三｜商品抵用券3,200元", note: "需身分證" },
+            "六獎": { content: "好運溜溜｜商品抵用券2,600元", note: "需身分證" },
+            "七獎": { content: "好事成雙｜商品抵用券2,000元", note: "需身分證" },
+            "八獎": { content: "一路領先｜商品抵用券1,600元", note: "需身分證" },
+            "九獎": { content: "一馬當先｜商品抵用券1,000元", note: "需身分證" },
+            "十獎": { content: "米多禮｜金磚米", note: "" },
+            "十一獎": { content: "紘裕｜玉馬呈祥素食宴年菜組", note: "" },
+            "十二獎": { content: "丞昀｜鰻魚米糕", note: "" },
+            "十三獎": { content: "王信勛｜魚池小香菇", note: "" },
+            "十四獎": { content: "丞昀｜叫化雞米糕", note: "" },
+            "十五獎": { content: "新北市農會｜清潔組合(洗衣球+洗碗精+洗手乳)", note: "" },
+            "十六獎": { content: "喬麥屋｜8入麵禮盒", note: "" },
+            "十七獎": { content: "清泉果園｜茂谷柑禮盒", note: "" },
+            "十八獎": { content: "振楠｜雙色蛋", note: "" },
+            "十九獎": { content: "順羽｜囍願蛋", note: "" },
+            "二十獎": { content: "顏式畜牧場｜黃金養生蛋", note: "" },
         };
 
         const html5QrCode = new Html5Qrcode("reader");
@@ -238,3 +266,4 @@
 </body>
 
 </html>
+
