--- a/QRcode_input_many.html
+++ b/QRcode_input_many.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>抽獎系統 - 批次匯入</title>
+    <title>抽獎系統 - 批次優化</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
@@ -166,8 +166,10 @@
                     const area = document.getElementById('ticketNumbers');
                     // 先用 .trim() 把框框內「看不見的換行或空白」抓出來清除掉
                     const currentVal = area.value.trim(); 
+
                     // 如果清除後是空的，就直接放號碼；如果不是空的，才加換行
                     area.value = (currentVal === "" ? "" : currentVal + "\n") + decodedText;
+                    
                     updateCount();
                     
                     if (navigator.vibrate) navigator.vibrate(100);
@@ -303,7 +305,4 @@
 </body>
 
 </html>
-
-
-
 
