--- a/QRcode_input_many.html
+++ b/QRcode_input_many.html
@@ -75,6 +75,7 @@
                         <option value="十八獎">十八獎</option>
                         <option value="十九獎">十九獎</option>
                         <option value="二十獎">二十獎</option>
+                        <option value="林金結議員贊助">林金結議員贊助</option>
                     </select>
                 </div>
                 <div class="col-span-1">
@@ -125,6 +126,7 @@
             "十八獎": { content: "振楠｜雙色蛋", note: "" },
             "十九獎": { content: "順羽｜囍願蛋", note: "" },
             "二十獎": { content: "顏式畜牧場｜黃金養生蛋", note: "" },
+            "林金結議員贊助": { content: "林金結議員｜單把原味小奶鍋", note: "" },
         };
 
         const prizeToStages = {
@@ -148,7 +150,8 @@
             "十七獎": ["第一階段"],
             "十八獎": ["第一階段"],
             "十九獎": ["第一階段"],
-            "二十獎": ["第一階段"]
+            "二十獎": ["第一階段"],
+            "林金結議員贊助": ["第一階段"]
         };
         
         const html5QrCode = new Html5Qrcode("reader");
@@ -305,4 +308,5 @@
 </body>
 
 </html>
+
 
