--- a/QRcode_search.html
+++ b/QRcode_search.html
@@ -114,7 +114,7 @@
     <div id="displayArea"></div>
 
     <script>
-        const WEBHOOK_URL = 'https://phenomenalistic-jennette-unreleasible.ngrok-free.dev/webhook/new_bingo';
+        const WEBHOOK_URL = 'https://projectboy-n8n-free.hf.space/webhook/new_bingo';
         let html5QrCode;
 
         async function startScanner() {
@@ -205,6 +205,4 @@
         }
     </script>
 </body>
-
 </html>
-
